Changed folder name

--- a/Console Game Tests/Console Game Tests.csproj
+++ b/Console Game Tests/Console Game Tests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Console Game\Console Game.csproj" />
     <ProjectReference Include="..\Learn test\Console Game.csproj" />
   </ItemGroup>
 
